Old YouTube video no longer supported Changed with a new one

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -58,6 +58,5 @@
 </section>
 <section class="container-md mb-3">
   <h1 class="text-center my-5">Postupak proizvodnje</h1>
-  <iframe class="mx-auto d-flex" width="560" height="315" src="https://www.youtube.com/embed/QfrRaQp1MMU?si=rnUYwnpmfO6DoJkP"
-          title="YouTube video player" allowfullscreen></iframe>
+  <iframe class="mx-auto d-flex" width="560" height="315" src="https://www.youtube.com/embed/7TMtA8Eh9uE?si=vpVboBVqyJUlY3mk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
